--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/indexObfuscated.js"></script>
+    <script src="js/index.min.js"></script>
 
 </body>
 
